# Assginment

./: CMakeLists.txt  Donator.cpp  Donator.h  DonatorApp.cpp  DonatorApp.h  DonatorLinkedList.cpp  DonatorLinkedList.h  Faculty.cpp  Faculty.h  GDonor.cpp  GDonor.h  MyLinkedList.hpp  MyNode.hpp  Student.cpp  Student.h  main.cpp
