cmake_minimum_required(VERSION 3.25)
project(c__8)

set(CMAKE_CXX_STANDARD 17)

add_executable(c__8 main.cpp
        Donator.cpp
        Donator.h
        DonatorApp.cpp
        DonatorApp.h
        Faculty.cpp
        Faculty.h
        GDonor.cpp
        GDonor.h
        MyLinkedList.hpp
        MyNode.hpp
        Student.h
        Student.cpp
        DonatorLinkedList.h
        DonatorLinkedList.cpp
        )
